force-app/main/default/objects/tc9_pr__Location__c/tc9_pr__Location__c.object-meta.xml
<CustomObject>
    <description>This object holds the location information and the tax rate related to that location. This is used by timesheeting/invoicing to process the amount of tax to be applied based on the location of an Assignment.</description>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>