force-app/main/default/objects/tc9_pr__Location__c/fields/Early_Pay_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay_Quantity__c</fullName>
    <label>Early Pay Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>