force-app/main/default/objects/tc9_pr__Location__c/fields/Early_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay_Type__c</fullName>
    <label>Early Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>