force-app/main/default/objects/tc9_pr__Location__c/fields/Resignation_Pay_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Resignation_Pay_Quantity__c</fullName>
    <label>Resignation Pay Quantity</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>