force-app/main/default/objects/tc9_pr__Location__c/fields/tc9_pr__BMS_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__BMS_Id__c</fullName>
    <description>Business Management System Id for Single Touch Payroll</description>
    <inlineHelpText>Business Management System Id for Single Touch Payroll</inlineHelpText>
    <label>BMS Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>