force-app/main/default/objects/tc9_pr__Location__c/fields/tc9_pr__Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Parent_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Parent Location of the Location. Allows for hierarchy location setup</description>
    <inlineHelpText>The Parent Location of the Location. Allows for hierarchy location setup</inlineHelpText>
    <label>Parent Location</label>
    <referenceTo>tc9_pr__Location__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>