force-app/main/default/objects/tc9_pr__Location__c/fields/tc9_pr__Payroll_Tax_Locality__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Locality__c</fullName>
    <description>Defines the Payroll Tax Locality that applies to the Location.</description>
    <inlineHelpText>Defines the Payroll Tax Locality that applies to the Location.</inlineHelpText>
    <label>Payroll Tax Locality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>QLD Metro</fullName>
            </value>
            <value>
                <fullName>QLD Regional</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC Metro</fullName>
            </value>
            <value>
                <fullName>VIC Regional</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NSW,</fullName>
                <isActive>false</isActive>
                <label>NSW,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>