force-app/main/default/objects/tc9_pr__Location__c/fields/tc9_pr__Workcover_on_Super_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Workcover_on_Super_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, workcover on-costs will not calculate on the associated superannuation totals</description>
    <inlineHelpText>If selected, workcover on-costs will not calculate on the associated superannuation totals</inlineHelpText>
    <label>Workcover on Super Exempt</label>
    <type>Checkbox</type>
</CustomField>