force-app/main/default/objects/tc9_pr__Location__c/fields/Termination_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Termination_Pay_Type__c</fullName>
    <label>Termination Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Early</fullName>
            </value>
            <value>
                <fullName>Regular Pay Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>