force-app/main/default/objects/tc9_pr__Location__c/fields/x2c9_WorkCover_Industry_Classification__c.field-meta.xml
<CustomField>
    <fullName>x2c9_WorkCover_Industry_Classification__c</fullName>
    <description>This is the WorkCover Industry Classification name - contact the Health &amp; Safety team member if unsure.</description>
    <inlineHelpText>This is the WorkCover Industry Classification name - contact the Health &amp; Safety team member if unsure.</inlineHelpText>
    <label>WorkCover Industry Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>