force-app/main/default/objects/tc9_pr__Location__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>